gke_k8s/k8s/deployment_1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: website
        image: docker.io/hamelsmu/hello-web
        ports:
        - containerPort: 8083
---
## Sets up networking for the app
apiVersion: v1
kind: Service
metadata:
  name: hamelapp
spec:
  selector:
    app: hello
  ports:
    - port: 8083
      targetPort: 8083
---
# boilerplate from https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: oauth-ip-address
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: hamelapp
      port:
        number: 8083
